fix: fixed auth system to work for bot app and tg bot users
