# apps/backend/internal/docs/openapi.json
@@ -199,6 +199,60 @@
                     }
                 }
             }
+        },
+        "/auth/signup/tg": {
+            "post": {
+                "description": "Create an account on dexion",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Create an account",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/api_http_handlers_auth.TelegramRegisterRequest"
+                            }
+                        }
+                    },
+                    "description": "Signup data",
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "User created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/components/schemas/backend_api_http.Response"
+                                        },
+                                        {
+                                            "type": "object",
+                                            "properties": {
+                                                "data": {
+                                                    "$ref": "#/components/schemas/backend_internal_db_repository.User"
+                                                }
+                                            }
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/backend_api_http.InternalServerErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "tags": [
@@ -244,17 +298,21 @@
             }
         },
         "schemas": {
-            "EmailID": {
+            "api_http_handlers_auth.TelegramRegisterRequest": {
                 "type": "object",
+                "required": [
+                    "telegram_chat_id",
+                    "type"
+                ],
                 "properties": {
-                    "email": {
+                    "password": {
                         "type": "string"
                     },
-                    "id": {
+                    "telegram_chat_id": {
                         "type": "string"
                     },
-                    "profileId": {
-                        "type": "string"
+                    "type": {
+                        "$ref": "#/components/schemas/backend_internal_db_repository.UserType"
                     }
                 }
             },
@@ -327,7 +385,8 @@
                 "type": "object",
                 "required": [
                     "email",
-                    "password"
+                    "password",
+                    "type"
                 ],
                 "properties": {
                     "email": {
@@ -337,8 +396,65 @@
                     "password": {
                         "type": "string",
                         "example": "Hello"
+                    },
+                    "type": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/backend_internal_db_repository.UserType"
+                            }
+                        ],
+                        "example": "APP"
                     }
                 }
+            },
+            "backend_internal_db_repository.User": {
+                "type": "object",
+                "required": [
+                    "email",
+                    "password",
+                    "type"
+                ],
+                "properties": {
+                    "createdAt": {
+                        "$ref": "#/components/schemas/pgtype.Timestamptz"
+                    },
+                    "email": {
+                        "type": "string",
+                        "example": "mosh@mail.com"
+                    },
+                    "id": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string",
+                        "example": "Hello"
+                    },
+                    "telegramChatId": {
+                        "type": "string"
+                    },
+                    "type": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/backend_internal_db_repository.UserType"
+                            }
+                        ],
+                        "example": "APP"
+                    },
+                    "updatedAt": {
+                        "type": "string"
+                    }
+                }
+            },
+            "backend_internal_db_repository.UserType": {
+                "type": "string",
+                "enum": [
+                    "APP",
+                    "TELEGRAM"
+                ],
+                "x-enum-varnames": [
+                    "UserTypeAPP",
+                    "UserTypeTELEGRAM"
+                ]
             },
             "backend_internal_domain.AuthResponse": {
                 "type": "object",
@@ -353,8 +469,8 @@
                         "description": "Added to hold the refresh token ID",
                         "type": "string"
                     },
-                    "user": {
-                        "$ref": "#/components/schemas/EmailID"
+                    "userID": {
+                        "type": "string"
                     }
                 }
             },
@@ -362,7 +478,8 @@
                 "type": "object",
                 "required": [
                     "email",
-                    "password"
+                    "password",
+                    "type"
                 ],
                 "properties": {
                     "email": {
@@ -372,6 +489,14 @@
                     "password": {
                         "type": "string",
                         "example": "Hello"
+                    },
+                    "type": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/backend_internal_db_repository.UserType"
+                            }
+                        ],
+                        "example": "APP"
                     }
                 }
             },
@@ -387,6 +512,33 @@
                     "refreshTokenId": {
                         "description": "Added to hold the refresh token ID",
                         "type": "string"
+                    }
+                }
+            },
+            "pgtype.InfinityModifier": {
+                "type": "integer",
+                "enum": [
+                    1,
+                    0,
+                    -1
+                ],
+                "x-enum-varnames": [
+                    "Infinity",
+                    "Finite",
+                    "NegativeInfinity"
+                ]
+            },
+            "pgtype.Timestamptz": {
+                "type": "object",
+                "properties": {
+                    "infinityModifier": {
+                        "$ref": "#/components/schemas/pgtype.InfinityModifier"
+                    },
+                    "time": {
+                        "type": "string"
+                    },
+                    "valid": {
+                        "type": "boolean"
                     }
                 }
             }
